Had to delete and copy the script to connect it to player, also altered level

--- a/Game 477 Community Design Project - Team Lucky Strikes/Assembly-CSharp.csproj
+++ b/Game 477 Community Design Project - Team Lucky Strikes/Assembly-CSharp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Assets\Assets\Distant Lands\Thalassophobia - Low Poly Oceans\Contents\Scripts\GlobalFlock.cs" />
     <Compile Include="Assets\Assets\Distant Lands\Thalassophobia - Low Poly Oceans\Contents\Scripts\WaypointSystem.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
+    <Compile Include="Assets\Scripts\PlayerMovement.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
